build out controller/views for Tags/Recipes
Co-authored-by: Mitchell Gantz <mgantz22@icloud.com>
Co-authored-by: John <john.lenz27@gmail.com>

--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -3,6 +3,9 @@
   <head>
   <meta charset="utf-8">
   <title>Recipes!!</title>
+    <link rel="icon" type="image/png" href="https://www.pngfind.com/pngs/m/242-2426710_png-50-px-butcher-knife-icon-png-transparent.png">
+    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
@@ -10,7 +13,7 @@
 </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-  <a class="navbar-brand">Recipe Index | </a>
+  <a class="navbar-brand">Recipe Box | </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
