Build it out more Co-authored-by: Mitchell Gantz <mgantz22@icloud.com> Co-authored-by: John <john.lenz27@gmail.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
   Layout = "_Layout";
 }
 
-<div class="jumbotron text-center">
-    <h1 class="display-1">MJJ Recipe Box</h1>
-    <p class="lead">Management Systems</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container" id='imgText'>
+    <h1 class="display-2">Mjj Recipe Box</h1>
+    <p class="lead">The Fire So Hot!</p>
+  </div>
 </div>
