--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -1,3 +1,37 @@
 @{
   Layout = "_Layout";
 }
+
+@using RecipeBox.Models
+@model RecipeBox.Models.Recipe
+
+<h2>Recipe Details</h2>
+<hr />
+<h3>Recipe Name: @Html.DisplayFor(model => model.RecipeName)</h3>
+
+@if(@Model.JoinEntities.Count == 0)
+{
+  <p>This recipe does not have any tags yet!</p>
+}
+else
+{<p>This meal has the tags of:</p>
+  <ul>
+    @foreach (RecipeTag fish in Model.JoinEntities)
+    {
+      <li>  @fish.Tag.TagName</li>
+      @using (Html.BeginForm("DeleteFish", "Tags"))
+      {
+        @Html.Hidden("FishId", fish.RecipeTagId)
+      }
+
+    }
+  </ul>
+}
+
+
+
+@Html.ActionLink("Add a Tag", "AddTag", "Recipes", new {id = Model.RecipeId})
+
+<a href='@Url.Action("AddTag", new { id = Model.RecipeId })'>
+    <button type="button">Add a Tag</button>
+  </a>
