--- a/RecipeBox/Views/Shared/Footer.cshtml
+++ b/RecipeBox/Views/Shared/Footer.cshtml
@@ -1,1 +1,1 @@
-<div id="footer">Copyright 2023....Another One. Don't take our shit.  We da best programmers.  Mit-chizzell, Jan-DeNaro and Jan-"You Dont Want"-non - you don't need a last name. MJJ yea you know me</div>
+<div id="footer">Copyright 2023....Another One. Don't take our shit.  We da best programmers.  Mit-chizzell, Jan-DeNaro and Jan-"You Dont want"-non - you don't need a last name. MJJ yea you know us</div>
