--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="utf-8">
-  <title>Recipes!!</title>
+  <title>MJJ Recipe Box</title>
     <link rel="icon" type="image/png" href="https://www.pngfind.com/pngs/m/242-2426710_png-50-px-butcher-knife-icon-png-transparent.png">
     
 
@@ -20,6 +20,8 @@
   <div class="collapse navbar-collapse" id="navbarNav">
         <a class="nav-link enlarge" href='/'>Home</a>
         <a class="nav-link enlarge" href='/Recipes'>Recipes</a> 
+        <a class="nav-link enlarge" href='/Tags'> Categories</a>
+        <a class="nav-link enlarge" href='/Ingredients'> Ingredients</a>
         <a class="nav-link enlarge" href='/Ratings'> Top Rated</a>
         <a class="nav-link enlarge" href='/Ratings'> Mexicano <span>FIRE</span> so <span>HOT</span> it starts the fire hydrant..... essay</a>
   </div>
