--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -4,14 +4,21 @@
 
 @using RecipeBox.Models;
 
-<h2> Recipe List </h2>
+<h1>Recipes for @User.Identity.Name</h1>
 
-@if(Model.Count == 0)
+@if (@Model.Count == 0)
 {
-  <h3>No Recipes Yet!</h3>
+  <h3>No Recipes have been added yet!</h3>
+} 
+else
+{
+  <ul>
+    @foreach (Recipe item in Model)
+    {
+      <li>@Html.ActionLink($"{item.RecipeName}", "Details", new { id = item.RecipeId }) | @item.Tag.TagName</li>
+    }
+  </ul>
 }
 
-@foreach (Recipe item in Model)
-{
-  <p>@Html.ActionLink($"{item.RecipeName}", "Details", new {id = item.RecipeId})</p>
-}
+<p>@Html.ActionLink("Add new recipe", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
