--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="~/css/styles.css">
 </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+  @* <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
   <a class="navbar-brand">Recipe Box | </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,15 +20,15 @@
   <div class="collapse navbar-collapse" id="navbarNav">
         <a class="nav-link enlarge" href='/'>Home</a>
         <a class="nav-link enlarge" href='/Recipes'>Recipes</a> 
-        <a class="nav-link enlarge" href='/Tags'> Categories</a>
+        <a class="nav-link enlarge" href='/Tags/Index'> Categories</a>
         <a class="nav-link enlarge" href='/Ingredients'> Ingredients</a>
         <a class="nav-link enlarge" href='/Ratings'> Top Rated</a>
-        <a class="nav-link enlarge" href='/Ratings'> Mexicano <span>FIRE</span> so <span>HOT</span> it starts the fire hydrant..... essay</a>
+        <a class="nav-link enlarge" href='/Account'> Login</a> *@
+
   </div>
 </nav>
     @RenderBody()
     <br>
-    @await Html.PartialAsync("NavLinks")
     @await Html.PartialAsync("Footer")
   </body>
 </html>
