--- a/RecipeBox/Views/Tags/Create.cshtml
+++ b/RecipeBox/Views/Tags/Create.cshtml
@@ -4,14 +4,17 @@
 
 @model RecipeBox.Models.Tag
 
-<h3> Add a new tag <h3>
+<p>@Html.ValidationMessageFor(model => model.TagId, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
+<p>@Html.ValidationMessageFor(model => model.TagName, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
+
+<h2> Add a new Category </h2>
 
 @using(Html.BeginForm())
 {
     @Html.LabelFor(model => model.TagName)
     @Html.TextBoxFor(model => model.TagName)
 
-<input type="submit" value="Add new tag" class="btn btn-default" />
+<input type="submit" value="Add new Category" class="btn btn-default" />
 
 
 }
