--- a/RecipeBox/Views/Tags/Index.cshtml
+++ b/RecipeBox/Views/Tags/Index.cshtml
@@ -4,11 +4,11 @@
 
 @using RecipeBox.Models;
 
-<h1>List of tags</h1>
+<h1>List of  Categories</h1>
 
 @if (@Model.Count == 0)
 {
-    <h3> No tags have been added</h3>
+    <h3> No Categories have been added</h3>
     
 }
 
@@ -16,4 +16,5 @@
 {
     <li>@Html.ActionLink($"{item.TagName}", "Details", new {id = item.TagId})</li>
 }
-
+<br><br>
+@Html.ActionLink("Add A Category", "Create")
