pull shark baby

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
   <h4>Recipes for @User.Identity.Name</h4>
   @if (Model["recipes"].Length == 0)
   {
-    <p>No recipes have been added yet!</p>
+    <p>No recipes have been pulled yet added yet!</p>
   } 
   <ul>
     @foreach (Recipe recipe in Model["recipe"])
