--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
   <h4>Recipes for @User.Identity.Name</h4>
   @if (Model["recipes"].Length == 0)
   {
-    <p>No recipes have been pulled yet added yet!</p>
+    <p>No recipes have been added yet!</p>
   } 
   <ul>
-    @foreach (Recipe recipe in Model["recipe"])
+    @foreach (Recipe recipe in Model["recipes"])
     {
       <li>@Html.ActionLink(@recipe.RecipeName, "Details", "recipes", new { id = @recipe.RecipeId})</li>
     }
