Update index to remove nav on just the home screen
Co-authored-by: Jannon Sielaff <Razieleron@users.noreply.github.com>
Co-authored-by: John Lenz <john.lenz27@gmail.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
   </ul>
 }
 
-
+@* 
   	<input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
   	<label for="menu-icon"></label>
   	<nav class="nav"> 		
@@ -33,6 +33,7 @@
   			<li><a href="/Tags/Index">Categories</a></li>
   			<li><a href="/Ratings">Ratings</a></li>
   			<li><a href="/Account">Login</a></li>
+        <li><a href="/">Home</a></li> *@
   		</ul>
   	</nav>
 
