add home button to Views/Recipes

--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -30,3 +30,6 @@ else
 <a href='@Url.Action("AddTag", new { id = Model.RecipeId })'>
     <button type="button">Add/Remove a Category of a Recipe</button>
   </a>
+  <a href='@Url.Action("Index")'>
+    <button type="button">Return Home</button>
+  </a>
