--- a/RecipeBox/Views/Recipes/AddTag.cshtml
+++ b/RecipeBox/Views/Recipes/AddTag.cshtml
@@ -33,7 +33,7 @@
   @Html.Label("Select Tag")
   @Html.DropDownList("TagId")
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Add Category" />
 }
 <br>
 <a href='@Url.Action("Index")'>
