Update button class/style

--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -28,8 +28,8 @@ else
   </ul>
 }
 <a href='@Url.Action("AddTag", new { id = Model.RecipeId })'>
-    <button type="button">Add/Remove a Category of a Recipe</button>
+    <button type="button" class="button">Add/Remove a Category of a Recipe</button>
   </a>
   <a href='@Url.Action("Index")'>
-    <button type="button">Return Home</button>
+    <button type="button" class="button">Return Home</button>
   </a>
