--- a/RecipeBox/wwwroot/css/styles.css
+++ b/RecipeBox/wwwroot/css/styles.css
@@ -371,3 +371,30 @@ h1{
     font-size: 8vh;
   }
 }
+.button {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #f5f2f2;
+  background-color:#353746;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {
+  background-color:#3feeb7;
+  color:rgb(11, 11, 11);
+} 
+
+.button:active {
+  background-color:lightseagreen;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+  border: none;
+  color:#f5f2f2
+}
