--- a/RecipeBox/Views/Account/Login.cshtml
+++ b/RecipeBox/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 @model LoginViewModel
 
 <h2>Log in with your account</h2>
-<hr />
+<hr/>
 
 @if(!ViewData.ModelState.IsValid) 
 {
@@ -22,16 +22,18 @@
   @Html.LabelFor(m => m.Password)
   @Html.EditorFor(m => m.Password)
 
-  <input type="submit" class="button" value="Log in" />
+  <input type="submit" class="button" value="Log in">
 }
 
+
+
 </p>
-<p>@Html.ActionLink("Back to accounts page", "Index")</p>
 
 <a href='@Url.Action("Register")'>
-    <button type="button" class="button">Sign up</button>
+  <button type="button" class="button">Sign up</button>
 </a>
+<br><br>
 <a href='@Url.Action("Index")'>
-    <button type="button" class="button">Back</button>
+  <button type="button" class="button">Back</button>
 </a>
 
