--- a/RecipeBox/Views/Account/Register.cshtml
+++ b/RecipeBox/Views/Account/Register.cshtml
@@ -6,12 +6,12 @@
 
 @model RegisterViewModel
 
-<h2>Register a new user</h2>
+<h1>Register an account</h1>
 <hr />
 
-@if(!ViewData.ModelState.IsValid) 
+@if (!ViewData.ModelState.IsValid)
 {
-  @Html.ValidationSummary("Please fix the following error(s) and then resubmit the form:") 
+  @Html.ValidationSummary("Please fix the following error(s) and then resubmit the form:")
 }
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
@@ -19,13 +19,18 @@
   @Html.LabelFor(user => user.Email)
   @Html.TextBoxFor(user=> user.Email)
 
+  @* @Html.LabelFor(user => user.DisplayName)
+  @Html.TextBoxFor(user=> user.DisplayName) *@
+
   @Html.LabelFor(user=> user.Password)
   @Html.EditorFor(user=> user.Password)
 
   @Html.LabelFor(user=> user.ConfirmPassword)
   @Html.EditorFor(user=> user.ConfirmPassword)
 
-  <input type="submit" value="Register" />
+  <input type="submit" class="button" value="Register" />
 }
-
-<p>@Html.ActionLink("Back to accounts page", "Index")</p>
+<br>
+<a href='@Url.Action("Index")'>
+  <button type="button" class="button">Back</button>
+</a>
