--- a/RecipeBox/Views/Recipes/Edit.cshtml
+++ b/RecipeBox/Views/Recipes/Edit.cshtml
@@ -13,6 +13,10 @@
 
   @Html.LabelFor(model => model.RecipeName)
   @Html.EditorFor(model => model.RecipeName)
+  @Html.LabelFor(model => model.RecipeIngredients)
+  @Html.EditorFor(model => model.RecipeIngredients)
+  @Html.LabelFor(model => model.RecipeInstructions)
+  @Html.EditorFor(model => model.RecipeInstructions)
 
-   <input type="submit" value="Save" />
+   <input type="submit" class="button" value="Save" />
 }
