--- a/RecipeBox/Views/Tags/Delete.cshtml
+++ b/RecipeBox/Views/Tags/Delete.cshtml
@@ -9,7 +9,7 @@
 @Html.DisplayFor(model => model.TagName)
 @using (Html.BeginForm())
 {
-    <input type="submit" value="Delete"/>
+    <input type="submit" class="button" value="Delete"/>
 }
-
+<br>
 @Html.ActionLink("Back to all Tags", "Index")
