--- a/RecipeBox/wwwroot/css/styles.css
+++ b/RecipeBox/wwwroot/css/styles.css
@@ -1,18 +1,17 @@
+
 div#footer {
 	position:fixed;
 	bottom:0px;
 	left:0px;
 	width:100%;
 	color:#CCC;
-	background:#333;
+	background:#0a0a0a;
 	padding:8px;
   text-underline-position: none;
 }
 
 body {
   background-color:lightgrey
-
-
 }
 
 a {
@@ -32,7 +31,7 @@ span {
   margin:15px 0px 0px 0px;
   border-radius:10px;
   background-image: url('../img/Splash.jpg');
-  background-position: 100% 30%;
+  background-position:left;
   
   background-size:100%;
 
@@ -47,14 +46,12 @@ span {
   text-align: left;
   position: left;
   color: azure;
-  
-
-  
 }
 
 .display-2{
   font-weight: 600;
-  -webkit-text-stroke: 2px black;
+  line-height: 1;
+  /* -webkit-text-stroke: 2px rgb(11, 11, 11); */
 }
 
 #navbarNav{
@@ -63,6 +60,7 @@ span {
   padding: 0;
   display: flex;
   justify-content: space-around;
+  font-size: 150%;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
@@ -72,15 +70,15 @@ body{
 	font-weight: 300;
 	font-size: 15px;
 	line-height: 1.7;
-	color: #ececee;
+	color:#333;
 	/* background-color: #1f2029; */
-	overflow: hidden;
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
   background-position: center;
   background-repeat: repeat;
   background-size: 4%;
   height: 100vh;
   width: 100%;
+  /* padding: 1.3; */
 }
 .section-center{
   position: absolute;
@@ -94,18 +92,26 @@ body{
   text-align: center;
   transform: translateY(-50%);
 }
+
 h1{
   font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
+  font-weight: 600;
   font-size: 7vw;
   line-height: 1;
-  color: #ffeba7;
+  color:#f7f7f7;
   text-align: center;
-  -webkit-text-stroke: 2px #ffeba7;
-  text-stroke: 2px #ffeba7;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  color: transparent;
+  -webkit-text-stroke: 2px rgb(250, 247, 247); 
+}
+
+p {
+  color: #333;
+}
+h3 {
+  color: #333;
+}
+
+h4 {
+  color: #333;
 }
 
 [type="checkbox"]:checked,
@@ -358,15 +364,6 @@ h1{
     right: 30px;
   }
 
-  h1
-  {
-    font-size: 9vw;
-    -webkit-text-stroke: 2px transparent;
-    text-stroke: 2px transparent;
-    -webkit-text-fill-color: #ffeba7;
-    text-fill-color: #ffeba7;
-    color: #ffeba7;
-  }
   .nav ul li a{
     font-size: 8vh;
   }
@@ -397,4 +394,12 @@ h1{
   transform: translateY(4px);
   border: none;
   color:#f5f2f2
+}
+.navbar-brand:hover {
+  color:#f5f2f2;
+}
+
+li {
+  margin:1.5%;
+  font-size: 150%;
 }
